# tfc-workshop-security

./: .gitignore  README.md
eks-demo-deployments/terraform/default/: cloud.tf  provider.tf  variables.tf
goof-master/: README.md  cloud.tf  imports.tf  main.tf  variables.tf
goof-master/modules/storage/: main.tf
rust-example/: Cargo.toml  README.md  cloud.tf  imports.tf  main.tf  rust_lambda.tf  variables.tf
rust-example/src/http_handler/: gemini_op.rs
sns-project/: README.md
vulnerable-ec2/: README.md  cloud.tf  imports.tf  main.tf  variables.tf
