[package]
name = "rust-example"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "0.14.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json"
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1", features = ["macros"] }